--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <form action="https://formsubmit.co/jesusmunozpost@gmail.com" method="POST" class="row g-3">
                 <input type="hidden" name="_captcha" value="false">
                 <input hidden name=_subject value="Alguien escribe desde ¿Hablamos? WOOOO!">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
+                <input type="hidden" name="_next" value="https://jesusmunnoz.github.io/hablamos/thanks.html">
                 <div class="col-md-6">
                     <label for="name" class="form-label">Nombre</label>
                     <input type="text" name="name" class="form-control" id="name" required>
